--- a/medieval-dynasty.html
+++ b/medieval-dynasty.html
@@ -24,7 +24,7 @@
        <article>
                 <div class="isi">
                     <div class="judul">
-                        Battlefield 5
+                        Medieval Dynasty
                     </div>
                     <img src="gambar/medievaldynasty.jpg" >
                     <p><strong><span>Medieval Dynasty PC minimum system requirements</span></strong></p>
