--- a/Football-Manager-2023.html
+++ b/Football-Manager-2023.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                Web Saya
+                Sahabat Teknologi
             </div>
         </header>
         <nav>
